<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_home"
        android:orderInCategory="100"
        android:title="@string/inicio"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/ic_equipos"
        android:orderInCategory="100"
...
